--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,8 @@ nav ul li a:hover::after {
     text-align: center;
     overflow: hidden;
     color: white;
-    margin-top: 0;
-    padding-top: 0;
+    margin-top: -80px; /* Negative margin to offset the fixed header height */
+    padding-top: 80px; /* Padding to ensure content doesn't go under navbar */
     box-sizing: border-box;
 }
 
